src/objects/zkmulti__MCCustom_Address_Source_Field__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source__c</fullName>
        <label>Custom Address Source</label>
        <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
        <relationshipLabel>Custom Address Source Fields</relationshipLabel>
        <relationshipName>Custom_Address_Source_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Dynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Output_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Output Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Option_Type__c</fullName>
        <label>Option Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Output_Condition__c</fullName>
        <label>Output Condition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Address Source Package</label>
        <referenceTo>zkmulti__MCCustom_Address_Source_Package__c</referenceTo>
        <relationshipLabel>Custom Address Source Fields</relationshipLabel>
        <relationshipName>Custom_Address_Source_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Custom Address Source Field</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Custom Address Source Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Address Source Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>